--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@astrojs/mdx": "^4.0.4",
     "@astrojs/react": "^4.1.2",
     "@astrojs/tailwind": "^5.1.4",
+    "@astrojs/vercel": "^8.0.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.0.3",
     "@types/react-dom": "^19.0.2",
     "astro": "^5.1.3",
